bad/return_class_in_func_returning_string.example_compiler_output
ERROR
[1mbad/return_class_in_func_returning_string.lat:4:24: [1;31merror: [0;1mreturned value of type `Y` is not convertible to return type `string`[m
string test() { return new Y; }
                       [1;32m^[m
